[gd_scene load_steps=3 format=1]

[ext_resource path="res://Malamikoj/Malamiko.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 60, 60 )

[node name="Malamiko" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Malamiko" type="KinematicBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 4
collision/mask = 5135
collision/margin = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Malamiko"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Aspekto" type="Node2D" parent="Malamiko"]

[node name="Korpo" type="Polygon2D" parent="Malamiko/Aspekto"]

polygon = Vector2Array( 50, -50, 50, 50, -50, 50, -50, -50 )
uv = Vector2Array(  )
color = Color( 0.898039, 0.223529, 0.207843, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 5.2

[node name="Konturo" type="Polygon2D" parent="Malamiko/Aspekto"]

polygon = Vector2Array( 50, -50, 50, 50, -50, 50, -50, -50 )
uv = Vector2Array(  )
color = Color( 0.129412, 0.129412, 0.129412, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = true
invert/border = 10.0

[node name="Kuglujo_A" type="Polygon2D" parent="Malamiko/Aspekto"]

transform/pos = Vector2( 30, -50 )
polygon = Vector2Array( 30, -30, 30, 30, 0, 20, 0, -30 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( -20, 30 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Kuglujo_B" type="Polygon2D" parent="Malamiko/Aspekto"]

transform/pos = Vector2( -20, -60 )
polygon = Vector2Array( 20, -30, 20, 20, -10, 30, -10, -30 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( -10, 40 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Vivo" type="Polygon2D" parent="Malamiko/Aspekto"]

polygon = Vector2Array( 50, 40, -50, 40, -50, 50, 50, 50 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Resxargigxi" type="Timer" parent="."]

process_mode = 1
wait_time = 0.16
one_shot = false
autostart = true

[connection signal="timeout" from="Resxargigxi" to="." method="_on_Resxargigxi_timeout"]


